fix: sostituisci getFirst() con get(0) per compatibilità Java 17